@@ -268,6 +268,9 @@ New Features
 
 * SOLR-6435: Add bin/post script to simplify posting content to Solr (ehatcher)
 
+* SOLR-6761: Ability to ignore commit and/or optimize requests from clients when running in
+  SolrCloud mode using the IgnoreCommitOptimizeUpdateProcessorFactory. (Timothy Potter)
+
   
 Bug Fixes
 ----------------------
